# Computer-Graphics-all-for-Mihoyo

./: .gitignore  LICENSE  README.md
dataset/earth_generator/: CMakeLists.txt  transform.txt
dataset/earth_generator/include/: camera.h  defines.h  light.h  mesh.h  shader.h  utils.h
dataset/earth_generator/report/: report.tex
dataset/earth_generator/scripts/: add_alpha.py  to_json.py
dataset/earth_generator/shader/: obj_fs.glsl  obj_vs.glsl  single_source.glsl
dataset/earth_generator/src/: camera.cpp  main.cpp  mesh.cpp  shader.cpp  utils.cpp
doc/: CS171.md
